fix(whatsapp-button): adjust z-index and add acessibility attributes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
 <app-navbar/>
+@if(documentListener.scrollFromTop$() > 300) {
+  <a @popUp app-whatsapp-button></a>
+}
 <router-outlet></router-outlet>
-<a app-whatsapp-button></a>
