--- a/src/app/components/layout/films-info/films-info.component.html
+++ b/src/app/components/layout/films-info/films-info.component.html
@@ -62,9 +62,9 @@
       <p #textEl class="px-5 relative mb-auto
       text-stone-600 shrink min-h-0 overflow-ellipsis overflow-hidden">{{ item.text }}
       @if(isTextsClamped()[index] && limitElementHeight() === true) {
-        <div @fadeIn class="flex items-end justify-center pointer-events-none
+        <div @fadeIn class="flex items-end justify-center
         absolute bottom-0 left-0 w-full h-[60px] from-25% bg-gradient-to-t from-white to-transparent">
-          <button class="text-sm px-4 py-1 rounded-xl text-stone-800 pointer-events-auto"
+          <button class="text-sm px-4 py-1 rounded-xl text-stone-800"
           (click)="disableLimitElementHeight()">Mostrar Mais</button>
         </div>
       }
