feat: update opengraph url

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="h-[calc(100vh-20px)] sm:h-[45rem] relative max-h-screen rounded-b-[0em] max-w-full overflow-hidden">
-    <img src="./images/windows3.webp" alt="Janela de prédio com vista para a cidade"
+    <img src="./images/windows3.webp" alt="Janela de prédio com vista para a cidade" fetchpriority="high"
     class="absolute building h-full w-full object-cover brightness-[65%] hue-rotate-[-12deg] grayscale-[40%]
     border-white sm:border-b-0 border-b-1" 
     (load)="handlePreloadFiles()">
